@@ -1,6 +1,7 @@
 2012-08-05 Harvey Brydon <hbrydon@users.sourceforge.net>
     * Fix VS2010 C4251 warnings (bug #3554666)
     * Fix VS2010 "_WIN32_WINNT not defined..." warnings (bug #3554667).
+    * Fix W4 C4100 warnings in TestPlugIn.h
 
 2012-06-22 Baptiste Lepilleur <blep@users.sourceforge.net>
 	* include/cppunit/portability/FloatingPoint.h:
